@@ -17,5 +17,6 @@ Sam Bolgert <sbolgert@gmail.com>
 Sean Brant <sean@riot9.com>
 Thomas Grainger <tagrain@gmail.com>
 Zygmunt Krynicki <zygmunt.krynicki@canonical.com>
+apkawa <apkawa@gmail.com>
 metazet <metazet.mail@gmail.com>
 mulder999 <mulder999@users.noreply.github.com>
